--- a/portfolio.html
+++ b/portfolio.html
@@ -292,6 +292,20 @@
             </li>
           </ul>
         </div>
+        <div class="footer-third-box">
+          <p class="title-footer">Підпишіться на розсилку</p>
+          <form class="modal-footer">
+            <label class="label">
+              <input class="email-form" type="email" name="mail" placeholder="E-mail" />
+            </label>
+            <button type="submit" class="btn-footer">
+              Підписатися
+              <svg aria-label="іконка телеграму" class="icon-footer" width="24" height="24">
+                <use href="./images/sprite.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
