--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
             <svg class="icon-checked" width="18" height="18">
               <use class="icon-checked-icon" href="./images/sprite.svg#icon-check"></use>
             </svg>
-            Погоджуюся з розсилкою та приймаю
+            Погоджуюся з розсилкою та приймаю&nbsp;
             <a class="modal-link" href="#">Умови договору</a>
           </label>
           <button class="btn-modal" type="submit">Відправити</button>
