--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
             </div>
           </label>
           <label class="checkbox-label">
-            <input type="checkbox" class="modal-form-check" name="info" checked />
+            <input type="checkbox" class="modal-form-check" name="info" />
             <svg class="icon-checked" width="18" height="18">
               <use class="icon-checked-icon" href="./images/sprite.svg#icon-check"></use>
             </svg>
