--- a/index.html
+++ b/index.html
@@ -413,18 +413,20 @@
       </button>
       <form class="form-group">
         <p class="form-title">Залиште свої дані, ми вам передзвонимо</p>
-        <label class="label-form">Ім'я
+        <label class="label-form">Ім'я*
           <div class="inputs">
-            <input class="input" type="text" name="username" />
+            <input class="input" type="text" name="username" required pattern="[a-zA-Zа-яА-ЯіІїЇ]+" name="user_name" />
             <svg class="icon-form" width="18" height="18">
               <use href="./images/sprite.svg#icon-person"></use>
             </svg>
           </div>
         </label>
         <label class="label-form">
-          Телефон
+          Телефон*
           <div class="inputs">
-            <input class="input" type="tel" name="telephone" /><svg class="icon-form" width="18" height="18">
+            <input class="input" type="tel" name="telephone" required pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+              title="xxx-xxx-xx-xx" name="user_phone" />
+            <svg class="icon-form" width="18" height="18">
               <use href="./images/sprite.svg#icon-tel"></use>
             </svg>
           </div>
@@ -440,11 +442,12 @@
         <label class="label-form">
           Коментар
           <div class="inputs">
-            <textarea class="textarea" name="comment" placeholder="Введіть текст"></textarea>
+            <textarea class="textarea" name="comment" placeholder="Введіть текст"
+              pattern="[a-zA-Zа-яА-ЯіІїЇ]+"></textarea>
           </div>
         </label>
         <label class="checkbox-label">
-          <input type="checkbox" class="modal-form-check" name="info" />
+          <input type="checkbox" class="modal-form-check" name="info" required />
           <svg class="icon-checked" width="18" height="18">
             <use class="icon-checked-icon" href="./images/sprite.svg#icon-check"></use>
           </svg>
@@ -457,4 +460,5 @@
   </div>
   <script src="./js/modal.js"></script>
 </body>
+
 </html>
