--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
             </svg>
           </div>
         </label>
-        <label class="label-form">
+        <label class="label-form coments">
           Коментар
           <div class="inputs">
             <textarea class="textarea" name="comment" placeholder="Введіть текст"
